# cube_bot_2026

./: .gitignore  README.md  arm.py  build_notes.txt  button_display_test.py  calibrate.py  calibration.json  cam_test.py  cube.py  cube_bot.py  display.py  display_message.py  maestro.conf  maestro.py  main.py  menu.py  motion_test.py  pyproject.toml  solver.py  visualize.py
printed_parts/: base_plate.py  new_base_plate-Body-updated.3mf  new_base_plate.20260116-030058.FCBak  new_base_plate.20260118-201238.FCBak  new_base_plate.3mf  new_base_plate.FCStd  pcb_end_clamp.py  rubiks_robot_2026.3mf
