[project]
name = "cube-solver"
version = "0.1.0"
description = "Software for Rubik's cube solver bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ruff", "pylint", "pyserial", "kociemba", "rich", "requests",]

[tool.uv]
# This project expects system packages (libcamera, picamera2)
# Create venv with:
#   uv venv --system-site-packages